data-navigation, fixes, fixes, fixes

--- a/src/styles/base/mixins/arrows.less
+++ b/src/styles/base/mixins/arrows.less
@@ -15,7 +15,7 @@
 // }
 
 // Caret
-.caret(@size, @offset, @color: currentColor) {
+.caret(@size, @offset: 0, @color: currentColor) {
     position: relative;
     padding-right: (@size + @offset);
     &:after {
