--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -169,6 +169,7 @@
         font-weight: @blockquote-quote-font-weight;
         padding: @blockquote-padding;
         margin-bottom: @spacing-base;
+        letter-spacing: @blockquote-quote-letter-spacing;
         line-height: @blockquote-quote-line-height;
 
         // Blockquote Quote
