--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -43,6 +43,7 @@
             box-shadow: @tooltip-box-shadow;
             color: @tooltip-color;
             content: attr(data-tooltip);
+            font-family: @tooltip-font-family;
             font-size: @tooltip-font-size;
             font-weight: @tooltip-font-weight;
             line-height: @tooltip-line-height !important;
