--- a/src/styles/base/mixins/button.less
+++ b/src/styles/base/mixins/button.less
@@ -34,15 +34,44 @@
 }
 
 // Button Theme
-.button-theme(@color: @button-default-color, @background: @button-default-bg, @border-color: @button-default-border, @active-color: @button-default-hover-color, @active-background: @button-default-hover-bg, @active-border-color: @button-default-hover-border) {
+.button-theme(
+    @color: @button-default-color,
+    @background: @button-default-bg,
+    @border-color: @button-default-border,
+    @hover-color: @button-default-hover-color,
+    @hover-background: @button-default-hover-bg,
+    @hover-border-color: @button-default-hover-border,
+    @active-color: @hover-color,
+    @active-background: @hover-background,
+    @active-border-color: @hover-border-color,
+    @separate-hover-active: false,
+    @disable-active: false) {
+
     .button-styles(@color, @background, @border-color);
-    &:not(:disabled):hover,
-    &:not(:disabled):focus,
-    &:active,
-    &.is-active {
-        .button-styles(@active-color, @active-background, @active-border-color);
+
+    & when (@separate-hover-active =false) {
+        &:not(:disabled):hover,
+        &:not(:disabled):focus,
+        &:active,
+        &.is-active {
+            .button-styles(@hover-color, @hover-background, @hover-border-color);
+        }
+    }
+
+    & when (@separate-hover-active =true) {
+        &:not(:disabled):hover,
+        &:not(:disabled):focus {
+            .button-styles(@hover-color, @hover-background, @hover-border-color);
+        }
+        & when (@disable-active =false) {
+            &:active,
+            &.is-active {
+                .button-styles(@active-color, @active-background, @active-border-color);
+            }
+        }
     }
 }
+
 
 // Button Size
 .button-size( @font-size: @button-font-size, @height: @button-height, @padding-horizontal: @button-horizontal-padding, @border-width: @button-border-width) {
