--- a/src/styles/base/mixins/fluid-value.less
+++ b/src/styles/base/mixins/fluid-value.less
@@ -8,7 +8,7 @@
 
 // Usage
 // .selector {
-//    .fluid-value(16px, 24px, 480px, 1280px);
+//    .fluid-value(font-size, 16px, 24px, 480px, 1280px);
 // }
 
 
