--- a/src/styles/utilities/current-media-query.less
+++ b/src/styles/utilities/current-media-query.less
@@ -1,42 +1,53 @@
 //
 // Current Media Query
 // -------------------------------------------------------
-.current-media-query(@boolean) when (@boolean = true) {
+.current-media-query(@boolean) when (@boolean =true) {
 
     //This adds a label in the top-left corner that displays the current media query state.
 
-    html:after {
-        color: @white;
-        content: "@xs";
-        padding: 6px;
-        position: fixed;
-        top: 0;
-        right: 0;
-        z-index: 9999;
-        text-align: center;
-        font-family: sans-serif;
-        font-weight: bold;
-        font-size: 10px;
-        letter-spacing: .025em;
-        border-radius: 0 0 0 3px;
-        background: rgba(0,0,0,0.5);
-
-        @media @sm-up {
-            content: "@sm";
+    html {
+        &:before,
+        &:after {
+            color: @white;
+            position: fixed;
+            top: 0;
+            z-index: 9999;
+            text-align: center;
+            font-family: sans-serif;
+            font-size: 8px;
+            letter-spacing: .025em;
+            background: rgba(0, 0, 0, 0.4);
+            height: 16px;
+            line-height: 16px;
+            padding: 0 4px;
+            border-radius: 0 0 3px 3px;
         }
-
-        @media @md-up {
-            content: "@md";
+        &:after {
+            right: 4px;
+            content: "@xs";
+            @media @sm-up {
+                content: "@sm";
+            }
+            @media @md-up {
+                content: "@md";
+            }
+            @media @lg-up {
+                content: "@lg";
+            }
+            @media @xl-up {
+                content: "@xl";
+            }
         }
-
-        @media @lg-up {
-            content: "@lg";
-        }
-
-        @media @xl-up {
-            content: "@xl";
+        &:before {
+            right: 36px;
+            @media @nav-responsive-down {
+                content: "@nav-hidden";
+            }
+            @media @nav-responsive-up {
+                content: "@nav-visible";
+            }
         }
     }
-
 }
+
 .current-media-query(@use-current-media-query);
