--- a/src/styles/utilities/text-weight.less
+++ b/src/styles/utilities/text-weight.less
@@ -18,6 +18,10 @@
     .u-text-bold {
         font-weight: 700 !important;
     }
+
+    .u-text-black {
+        font-weight: 900 !important;
+    }
 }
 
 .use-text-weight(@use-text-weight);
