margins and paddings

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -573,6 +573,8 @@
 @use-display:                   true;
 @use-flex-alignment:            true;
 @use-floats:                    true;
+@use-margins:                   true;
+@use-paddings:                  true;
 @use-text-alignment:            true;
 @use-text-color:                true;
 @use-text-weight:               true;
