--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -42,6 +42,8 @@
     @import 'utilities/display';
     @import 'utilities/flex-alignment';
     @import 'utilities/floats';
+    @import 'utilities/margins';
+    @import 'utilities/paddings';
     @import 'utilities/text-alignment';
     @import 'utilities/text-weight';
     @import 'utilities/text-color';
