--- a/src/styles/utilities/flex-alignment.less
+++ b/src/styles/utilities/flex-alignment.less
@@ -6,37 +6,34 @@
     // Horizontal aligment
 
     .u-flex-center {
-        display: flex !important;
         justify-content: center !important;
     }
 
     .u-flex-left {
-        display: flex !important;
         justify-content: flex-start!important;
     }
 
     .u-flex-right {
-        display: flex !important;
         justify-content: flex-end!important;
     }
 
     .u-flex-middle {
-        display: flex !important;
         align-items: center !important;
     }
 
     .u-flex-top {
-        display: flex !important;
         align-items: flex-start !important;
     }
 
     .u-flex-bottom {
-        display: flex !important;
         align-items: flex-end !important;
     }
 
-    .u-flex-space-between {
-        justify-content: space-between!important
+    .u-flex-between {
+        justify-content: space-between !important;
+    }
+    .u-flex-stretch {
+        align-items: stretch !important;
     }
 
     .u-flex-0 {
@@ -45,10 +42,6 @@
 
     .u-flex-1 {
         flex: 1 1 auto;
-    }
-
-    .u-flex-shrink {
-        flex-shrink: 1;
     }
 
     .u-flex-wrap {
