--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -6,12 +6,10 @@
     @import 'mixins/aspect-ratio';
     @import 'mixins/button';
     @import 'mixins/center';
-    @import 'mixins/center-block';
     @import 'mixins/clearfix';
     @import 'mixins/cover';
     @import 'mixins/fluid-value';
     @import 'mixins/font-face';
-    @import 'mixins/font-size';
     @import 'mixins/grid-framework';
     @import 'mixins/hamburger';
     @import 'mixins/hide-text';
@@ -20,8 +18,10 @@
     @import 'mixins/media-queries';
     @import 'mixins/modular-scale';
     @import 'mixins/momentum-scrolling';
+    @import 'mixins/pretty-scrollbars';
     @import 'mixins/rgba';
     @import 'mixins/scrim';
     @import 'mixins/tag-badge';
     @import 'mixins/text-overflow';
-    @import 'mixins/pretty-scrollbars';
+    @import 'mixins/utility-repeater';
+
