add open-graph, modular scale

--- a/src/styles/base/mixins/utility-repeater.less
+++ b/src/styles/base/mixins/utility-repeater.less
@@ -29,6 +29,6 @@
     }
 
     .u-@{selector}-xl {
-        @{selector}: @spacing-double * 2 !important;
+        @{selector}: @spacing-triple !important;
     }
 }
