--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -141,13 +141,16 @@
 // The base spacing unit is set equal to the "line-height" by default.
 // This helps create a consistent vertical rhythm throughout the framework.
 @spacing-base:                  @base-line;
+
+@spacing-sixth:                 round(@spacing-base / 6);
+@spacing-fifth:                 round(@spacing-base / 5);
+@spacing-fourth:                round(@spacing-base / 4);
+@spacing-third:                 round(@spacing-base / 3);
 @spacing-half:                  round(@spacing-base / 2);
 @spacing-two-thirds:            round(@spacing-base / 3 * 2);
-@spacing-third:                 round(@spacing-base / 3);
-@spacing-fourth:                round(@spacing-base / 4);
-@spacing-fifth:                 round(@spacing-base / 5);
-@spacing-sixth:                 round(@spacing-base / 6);
 @spacing-double:                round(@spacing-base * 2);
+@spacing-triple:                round(@spacing-base * 3);
+@spacing-quadruple:             round(@spacing-base * 4);
 
 // Modular Scale
 // Produce font-size in default modular-scale steps. Used in headings etc.
