--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -305,8 +305,6 @@
 @input-small-font-size:         12px;
 @input-large-height:            @input-height * 1.5;
 @input-large-font-size:         @input-font-size * 1.5;
-@input-huge-height:             @input-height * 2;
-@input-huge-font-size:          @input-font-size * 2;
 
 // Checkbox & radio buttons
 @checkbox-radio-background:     @input-background;
@@ -476,11 +474,11 @@
 @field-group-breakpoint:        @breakpoint-md;
 
 // Icons (svg)
-@icon-small-size:               16px;
-@icon-medium-size:              24px;
-@icon-large-size:               32px;
-@icon-huge-size:                48px;
-@icon-baseline:                 -0.0625em;
+@icon-sm-size:                  16px;
+@icon-md-size:                  24px;
+@icon-lg-size:                  48px;
+@icon-xl-size:                  72px;
+@icon-baseline-shift:           -0.0625em;
 
 // Border-radius
 @border-radius-small:           3px;
