--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -13,27 +13,27 @@
     }
 
     .button .icon,
-    .icon--text-alignment {
+    .icon--aligned {
         position: relative;
-        top: @icon-baseline;
+        top: @icon-baseline-shift;
     }
 
     // Icon sizes
 
-    .icon--small {
-        .icon-size(@icon-small-size);
+    .icon--sm {
+        .icon-size(@icon-sm-size);
     }
 
-    .icon--medium {
-        .icon-size(@icon-medium-size);
+    .icon--md {
+        .icon-size(@icon-md-size);
     }
 
-    .icon--large {
-        .icon-size(@icon-large-size);
+    .icon--lg {
+        .icon-size(@icon-lg-size);
     }
 
-    .icon--huge {
-        .icon-size(@icon-huge-size);
+    .icon--xl {
+        .icon-size(@icon-xl-size);
     }
 
 
