--- a/src/styles/base/mixins/media-queries.less
+++ b/src/styles/base/mixins/media-queries.less
@@ -3,7 +3,7 @@
 // -------------------------------------------------------
 
 // Usage
-// @media @md-up {
+// @media @medium-down {
 //    .selector {}
 // }
 
@@ -40,35 +40,35 @@
 
 // Extra-extra-small
 
-@xxs-down: ~"(max-width: 320px)";
-@xxs-only: ~"(max-width: 320px)";
+@xx-small-down: ~"(max-width: 320px)";
+@xx-small-only: ~"(max-width: 320px)";
 
 // Extra-small
 
-@xs-down: ~"(max-width: @{breakpoint-xs-max})";
-@xs-only: ~"(max-width: @{breakpoint-xs-max})";
+@x-small-down: ~"(max-width: @{breakpoint-xs-max})";
+@x-small-only: ~"(max-width: @{breakpoint-xs-max})";
 
 // Small
 
-@sm-up: ~"(min-width: @{breakpoint-sm-min})";
-@sm-down: ~"(max-width: @{breakpoint-sm-max})";
-@sm-only: ~"(min-width: @{breakpoint-sm-min}) and (max-width: @{breakpoint-sm-max})";
+@small-up: ~"(min-width: @{breakpoint-sm-min})";
+@small-down: ~"(max-width: @{breakpoint-sm-max})";
+@small-only: ~"(min-width: @{breakpoint-sm-min}) and (max-width: @{breakpoint-sm-max})";
 
 // Medium
 
-@md-up: ~"(min-width: @{breakpoint-md-min})";
-@md-down: ~"(max-width: @{breakpoint-md-max})";
-@md-only: ~"(min-width: @{breakpoint-md-min}) and (max-width: @{breakpoint-md-max})";
+@medium-down: ~"(min-width: @{breakpoint-md-min})";
+@medium-down: ~"(max-width: @{breakpoint-md-max})";
+@medium-only: ~"(min-width: @{breakpoint-md-min}) and (max-width: @{breakpoint-md-max})";
 
 // Large
 
-@lg-up: ~"(min-width: @{breakpoint-lg-min})";
-@lg-down: ~"(max-width: @{breakpoint-lg-max})";
-@lg-only: ~"(min-width: @{breakpoint-lg-min}) and (max-width: @{breakpoint-lg-max})";
+@large-up: ~"(min-width: @{breakpoint-lg-min})";
+@large-down: ~"(max-width: @{breakpoint-lg-max})";
+@large-only: ~"(min-width: @{breakpoint-lg-min}) and (max-width: @{breakpoint-lg-max})";
 
 // Extra-large
 
-@xl-up: ~"(min-width: @{breakpoint-xl-min})";
+@x-large-up: ~"(min-width: @{breakpoint-xl-min})";
 
 // Retina
 
