--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -179,7 +179,7 @@
         // Inline styles
         &.checkbox--inline,
         &.radio--inline {
-            @media @md-up {
+            @media @medium-down {
                 display: inline-block;
                 margin-top: 0; // reset margin
                 margin-right: @spacing-half; // space out consecutive inline controls
