--- a/src/styles/utilities/visibility.less
+++ b/src/styles/utilities/visibility.less
@@ -31,7 +31,7 @@
         display: none !important;
     }
 
-    @media @xs-down {
+    @media @x-small-down {
         .u-hide-xs-down {
             display: none !important;
         }
@@ -39,12 +39,12 @@
 
     // Small
 
-    @media @sm-up {
+    @media @small-up {
         .u-hide-sm-up {
             display: none !important;
         }
     }
-    @media @sm-down {
+    @media @small-down {
         .u-hide-sm-down {
             display: none !important;
         }
@@ -52,13 +52,13 @@
 
     // Medium
 
-    @media @md-up {
+    @media @medium-down {
         .u-hide-md-up {
             display: none !important;
         }
     }
 
-    @media @md-down {
+    @media @medium-down {
         .u-hide-md-down {
             display: none !important;
         }
@@ -66,13 +66,13 @@
 
     // Large
 
-    @media @lg-up {
+    @media @large-up {
         .u-hide-lg-up {
             display: none !important;
         }
     }
 
-    @media @lg-down {
+    @media @large-down {
         .u-hide-lg-down {
             display: none !important;
         }
@@ -80,7 +80,7 @@
 
     // Extra-large
 
-    @media @xl-up {
+    @media @x-large-up {
         .u-hide-xl-up {
             display: none !important;
         }
