--- a/src/styles/objects/grid.less
+++ b/src/styles/objects/grid.less
@@ -10,12 +10,15 @@
     //        </element>
     //    </element>
     // </element>
+
     // Container
     .use-container(@boolean) when (@boolean =true) {
         .container,
         .container-fluid {
             .make-container();
-        } // Fluid containers
+        }
+
+        // Fluid containers
         .container-fluid {
             width: @container-fluid;
             max-width: @container-fluid-max;
@@ -29,32 +32,41 @@
         .container-fluid--inner {
             width: @container-fluid-inner;
             max-width: @container-fluid-inner-max;
-        } // Fixed containers
+        }
+
+        // Fixed containers
+
         // Container Small (Default)
         .use-screen-sm(@boolean) when (@boolean =true) {
             .container {
                 width: @container-sm;
             }
         }
-        .use-screen-sm(@use-screen-sm); // Container Medium
+        .use-screen-sm(@use-screen-sm);
+
+        // Container Medium
         .use-screen-md(@boolean) when (@boolean =true) {
-            @media @md-up {
+            @media @medium-down {
                 .container {
                     width: @container-md;
                 }
             }
         }
-        .use-screen-md(@use-screen-md); // Container Large
+        .use-screen-md(@use-screen-md);
+
+        // Container Large
         .use-screen-lg(@boolean) when (@boolean =true) {
-            @media @lg-up {
+            @media @large-up {
                 .container {
                     width: @container-lg;
                 }
             }
         }
-        .use-screen-lg(@use-screen-lg); // Container Extra-Large
+        .use-screen-lg(@use-screen-lg);
+
+        // Container Extra-Large
         .use-screen-xl(@boolean) when (@boolean =true) {
-            @media @xl-up {
+            @media @x-large-up {
                 .container {
                     width: @container-xl;
                 }
@@ -62,24 +74,32 @@
         }
         .use-screen-xl(@use-screen-xl);
     }
-    .use-container(@use-container); // Grid
+    .use-container(@use-container);
+
+    // Grid
     .use-grid(@boolean) when (@boolean =true) {
         .grid {
             .make-grid();
         }
     }
-    .use-grid(@use-grid); // Grid-column
+    .use-grid(@use-grid);
+
+    // Grid-column
     .use-grid-column(@boolean) when (@boolean =true) {
         .grid__column {
             .make-grid-column(@grid-gutter-width);
             width: 100%; // Default width for mobile column
-        } // Collapse column gutters
+        }
+
+        // Collapse column gutters
         .grid__column--flush {
             padding-left: 0;
             padding-right: 0;
         }
     }
-    .use-grid-column(@use-grid-column); // Grid modifiers
+    .use-grid-column(@use-grid-column);
+
+    // Grid modifiers
     .use-grid-modifiers(@boolean) when (@boolean =true) {
 
         // Grid with half gutters
@@ -101,7 +121,6 @@
                 padding-right: 0;
             }
         }
-
 
         // Grid with equal height columns
         .grid--equal-height {
